WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84740
"GlobalHandle" HandleHeap (now WeakSet) allocations grow but do not shrink
https://bugs.webkit.org/show_bug.cgi?id=84740
Summary
"GlobalHandle" HandleHeap (now WeakSet) allocations grow but do not shrink
Geoffrey Garen
Reported
2012-04-24 11:01:08 PDT
"GlobalHandle" HandleHeap (now WeakSet) allocations grow but do not shrink
Attachments
Patch
(3.82 KB, patch)
2012-04-24 11:08 PDT
,
Geoffrey Garen
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-04-24 11:08:05 PDT
Created
attachment 138602
[details]
Patch
Geoffrey Garen
Comment 2
2012-04-24 12:10:52 PDT
<
rdar://problem/9917638
>
Geoffrey Garen
Comment 3
2012-04-24 12:11:29 PDT
Committed
r115092
: <
http://trac.webkit.org/changeset/115092
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug